# todo-app-actix-htmx

./: README.md
backend/actix/: Cargo.toml
backend/actix/src/: handlers.rs  main.rs
backend/actix/src/database/: db.rs
frontend/src/: index.html
