[package]
name = "htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
futures = "0.3.30"
mongodb = "2.8.1"
serde = { version = "1.0.197", features = ["derive"] }
uuid = "1.7.0"
